policies/kubernetes/starter/namespace.yaml
---
# Change both names and version labels to your tested cluster minor version.
apiVersion: v1
kind: Namespace
metadata:
  name: dso-app
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.34
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.34
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.34
